<resources>
    <string name="app_name">RowCounter</string>
    <string name="action_add">Add Project</string>
    <string name="action_delete">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_string">Create New Project</string>
    <string name="dialog_repeat_limit">Set Repeat Limit</string>
    <string name="edit_title">Edit Title</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="project_name">Project Name</string>
    <string name="counter_name">Counter Name</string>
    <string name="invalid_name">Please Enter a Project Name</string>
    <string name="default_counter">00</string>
    <string name="repeat_counter">%d/%d</string>
    <string name="count_finished_rows">Finished Rows</string>
    <string name="count_in_progress_rows">Currently On Row</string>
    <string name="count_repeats">%d repeats completed</string>
    <string name="main_counter">Main Counter</string>
    <string name="secondary_counter">Secondary Counter</string>
</resources>
