<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/dialog_title"
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:text="@string/dialog_string"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:contentDescription="@string/app_name"/>

    <EditText
            android:id="@+id/dialog_edittext"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project_name"/>
    <LinearLayout
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarStyle">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                    android:layout_weight="20"/>
        <Button
                android:id="@+id/button_cancel"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
        <Button
                android:id="@+id/button_ok"
                android:text="@string/ok"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>