<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">


        <ImageButton
                android:id="@+id/minus_button"
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_remove_white_24dp"
                android:background="@drawable/circle_button"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="100dp"/>

        <TextView
                android:text="@string/default_counter"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/display"
                card_view:layout_constraintStart_toEndOf="@+id/minus_button"
                android:layout_marginStart="4dp"
                card_view:layout_constraintEnd_toStartOf="@+id/add_button"
                android:layout_marginEnd="4dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="92dp"
                card_view:layout_constraintHorizontal_bias="0.494"/>


        <ImageButton
                android:id="@+id/add_button"
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_add_white_24dp"
                android:background="@drawable/circle_button"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="100dp"
                card_view:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:text="@string/count_finished_rows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                card_view:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="4dp"
                card_view:layout_constraintBottom_toTopOf="@+id/display"
                card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                card_view:layout_constraintVertical_bias="0.838"/>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>