<android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="match_parent">


        <ImageButton
                android:id="@+id/minus_button"
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_remove_white_24dp"
                android:background="@drawable/circle_button"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="100dp"/>

        <TextView
                android:text="@string/default_counter"
                android:textSize="36sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/display"
                card_view:layout_constraintStart_toEndOf="@+id/minus_button"
                android:layout_marginStart="4dp"
                card_view:layout_constraintEnd_toStartOf="@+id/add_button"
                android:layout_marginEnd="4dp"
                card_view:layout_constraintHorizontal_bias="0.507" android:layout_marginTop="50dp"
                card_view:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="50dp"
                card_view:layout_constraintBottom_toBottomOf="parent" card_view:layout_constraintVertical_bias="0.0"/>


        <ImageButton
                android:id="@+id/add_button"
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_add_white_24dp"
                android:background="@drawable/circle_button"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="50dp"
                card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="50dp"
                card_view:layout_constraintTop_toTopOf="parent"/>
        <ImageView
                android:id="@+id/close_button"
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:srcCompat="@drawable/ic_close_grey_24dp"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                card_view:layout_constraintHorizontal_bias="1.0" card_view:layout_constraintVertical_bias="0.008"/>

        <ImageView
                android:contentDescription="@string/project_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" card_view:srcCompat="@drawable/ic_replay_black_24dp"
                android:id="@+id/clear_counter_button"
                android:layout_marginBottom="24dp" card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" card_view:layout_constraintTop_toBottomOf="@+id/display"
                card_view:layout_constraintVertical_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/imageView5" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" card_view:layout_constraintEnd_toStartOf="@+id/cycle_toggle"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="350dp"
                android:layout_height="26dp"
                card_view:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" card_view:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toTopOf="@+id/textView4"
                card_view:layout_constraintVertical_bias="0.333"
                card_view:layout_constraintEnd_toStartOf="@+id/close_button" android:layout_marginEnd="8dp"
                android:id="@+id/linearLayout">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" card_view:srcCompat="@drawable/ic_edit_black_24dp"
                    android:id="@+id/edit_button"/>
            <TextView
                    android:text="@string/secondary_counter"
                    android:layout_width="wrap_content"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:id="@+id/counter_title"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" card_view:srcCompat="@drawable/ic_repeat_grey_24dp"
                android:id="@+id/cycle_toggle"
                android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/display"
                android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent" card_view:layout_constraintVertical_bias="0.0"
                android:layout_marginEnd="152dp" card_view:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" card_view:srcCompat="@drawable/ic_link_grey_24dp"
                android:id="@+id/link_toggle" android:layout_marginBottom="8dp"
                card_view:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                card_view:layout_constraintTop_toBottomOf="@+id/display"
                card_view:layout_constraintVertical_bias="0.0" android:layout_marginStart="152dp"
                card_view:layout_constraintStart_toStartOf="parent"/>
    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>